--- a/plugin.yml
+++ b/plugin.yml
@@ -1,8 +1,8 @@
-name: DeletePlayerData
+name: AntiVoidLoop
+main: MegaPE\AntiVoidLoop\Main
 version: 1.0
-api: [1.9.0]
-author: MegaSamNinja & Darunia18
-description: Fixes Void Bug
-main: megasamninja\AntiVoidLoop\Main
+api: 1.9.0
+author: Darunia18
+description: Plugin to prevent the void death loop
 load: POSTWORLD
-website: www.megape.net
+website: http://http://www.megape.net/
