Fixed plugin not working! There were 2 problems:   1. The events were not registered at any moment!   2. You tried to use "Config files" when they're just USELESS

--- a/plugin.yml
+++ b/plugin.yml
@@ -1,8 +1,7 @@
 name: AntiVoidLoop
 main: MegaPE\AntiVoidLoop\Main
-version: 1.0
+version: 1.1
 api: 1.9.0
-author: Darunia18
+author: Darunia18 & iksaku
 description: Plugin to prevent the void death loop
-load: POSTWORLD
 website: http://http://www.megape.net/
